# RL-BFGS

./: MUJOCO_LOG.TXT  README.md  camera_librealsense.py  common.py  evaluate.py  franka_robot.py  franky_robot.py  play.py  play_real.py  plot.py  plot_var.py  requirements.txt  test_env.py  test_frankx.py  tester.py  train.py
algorithm/: __init__.py  ddpg.py  replay_buffer.py
calibration/: dist.npy  mtx.npy
envs/: __init__.py  config.py  custom_scenarios.py  franka_door.py  franka_drawer_env.py  franka_drawer_env_2.py  franka_maze_env.py  franka_obsx2_env.py  franka_shelf_env.py  ik_controller_bfgs.py  ik_controller_bfgs_shelf.py  ik_controller_cma.py  ik_controller_cma_shelf.py  rand_dyn_env.py  sim2real_env.py  sim2real_env_franky.py  utils.py
envs/assets/: franka_drawer.xml  franka_drawer_2.xml  franka_drawer_2_ik.xml  franka_drawer_ik.xml  franka_maze.xml  franka_maze_ik.xml  franka_obstx2.xml  franka_obstx2_ik.xml  (+4 more)
ik_controller_bfgs/: CMakeLists.txt  wrapper.py
ik_controller_bfgs_rot/: wrapper.py
ik_controller_cma/: wrapper.py
ik_controller_cma_rot/: CMakeLists.txt  wrapper.py
ik_controller_cma_rot/build_shelf/: CMakeCache.txt  Makefile  cmake_install.cmake
ik_controller_cma_rot/include/: forward_kinematics.hpp
ik_controller_cma_rot/src/: solve_ik.cpp
learner/: __init__.py  normal.py
plot/: progress1.csv  progress2.csv  progress3.csv  progress_1_.csv
test_camera/: test_aruco_distance.py  test_aruco_image.py  test_aruco_real.py  test_aruco_stream.py  test_camera.py  test_camera_ex.py  test_cv_color.py
utils/: gcc_utils.py  os_utils.py
(+127 files in other folders)
